[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ringtail"
version = "2.1.1"
requires-python = ">=3.9"
authors= [
    {name = "Forli Lab",email="forli@scripps.edu"}
]
description="Package for creating database from virtual screening files and performing filtering on results."
readme="README.md"
license={text="L-GPL-v2.1"}
keywords=[
    "virtual screening",
    "molecular modeling",
    "drug discovery",
    "drug design",
    "docking",
    "autodock",
]
classifiers=[
    "Environment :: Console",
    "Environment :: Other Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "meeko",
    "matplotlib",
    "rdkit",
    "scipy",
    "pandas",
    "multiprocess",
    "pandas"
]

[tool.setuptools]
packages = ["ringtail"]
package-dir = {"" = "."}

# [tool.setuptools.packages.find]
# where = ["ringtail"]

[tool.setuptools.package-data]
"*" = ["README.md","LICENSE","docs/*","test/*"]

[project.urls]
Repository="https://github.com/forlilab/Ringtail"
Documentation="https://ringtail.readthedocs.io"

[project.scripts]
rt_process_vs="ringtail.cli.rt_process_vs:main"
rt_compare="ringtail.cli.rt_compare:main"
rt_db_v100_to_v110="ringtail.cli.rt_db_v100_to_v110:main"
rt_db_to_v200="ringtail.cli.rt_db_to_v200:main"
rt_generate_config_file="ringtail.cli.rt_generate_config_file:main"